<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProcessActivity">

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/reset"
        android:textColor="@android:color/holo_red_light"
        android:textSize="24sp"
        app:cornerRadius="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/black"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonReset" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginStart="20dp"

        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/app_name"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonReset" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewProcess"
        android:layout_width="0dp"
        android:layout_height="120dp"

        android:layout_marginBottom="40dp"

        android:overScrollMode="never"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:scrollbars="none"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:visibility="visible" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:max="10"
        android:progress="0"
        android:progressBackgroundTint="@color/teal_200"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewProcess"
        app:layout_constraintEnd_toStartOf="@+id/textViewDigital"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewDigital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digital"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/seekBar" />

</androidx.constraintlayout.widget.ConstraintLayout>