<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewOpenCV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/background_gray"
                app:cardCornerRadius="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/cardViewEmail"
                app:layout_constraintStart_toStartOf="@+id/cardViewGithub"
                app:layout_constraintTop_toBottomOf="@+id/cardViewGithub">
                <!--点击水波涟漪效果：android:foreground="?android:attr/selectableItemBackground"-->

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageViewOpenCV"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="35dp"
                        android:layout_marginBottom="35dp"
                        android:contentDescription="@string/about_opencv"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/opencv" />

                    <TextView
                        android:id="@+id/cardTextOpenCV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/about_opencv"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageViewOpenCV"
                        app:layout_constraintStart_toEndOf="@+id/imageViewOpenCV"
                        app:layout_constraintTop_toTopOf="@+id/imageViewOpenCV" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewGithub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/background_gray"
                app:cardCornerRadius="40dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/touchViewAbout">
                <!--点击水波涟漪效果：android:foreground="?android:attr/selectableItemBackground"-->

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/cardTextGithub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="35dp"
                        android:text="@string/about_github"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageViewGithub" />

                    <ImageView
                        android:id="@+id/imageViewGithub"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="35dp"
                        android:contentDescription="@string/about_github"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/github" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/background_gray"
                app:cardCornerRadius="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/cardViewGithub">
                <!--点击水波涟漪效果：android:foreground="?android:attr/selectableItemBackground"-->

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageViewOutlook"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="35dp"
                        android:contentDescription="@string/about_email"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/outlook" />

                    <TextView
                        android:id="@+id/cardTextEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="35dp"
                        android:text="@string/about_email"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/imageViewOutlook"
                        app:layout_constraintStart_toStartOf="@+id/imageViewOutlook"
                        app:layout_constraintTop_toBottomOf="@+id/imageViewOutlook" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <com.x.digital.TouchRotateLayout
                android:id="@+id/touchViewAbout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardViewAbout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="20dp"
                        android:layout_marginTop="70dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardBackgroundColor="@color/background_gray"
                        app:cardCornerRadius="40dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">
                        <!--点击水波涟漪效果：android:foreground="?android:attr/selectableItemBackground"-->

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/CardTextTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="35dp"
                                android:text="@string/about"
                                android:textColor="@color/teal_200"
                                android:textSize="60sp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/CardTextVersion"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="35dp"
                                android:text="@string/about_version"
                                android:textColor="@color/text_gray"
                                android:textSize="20sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="@+id/cardTextAppName"
                                app:layout_constraintStart_toStartOf="@+id/cardTextAppName"
                                app:layout_constraintTop_toBottomOf="@+id/cardTextAppName" />

                            <TextView
                                android:id="@+id/cardTextAppName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:text="@string/app_name"
                                android:textColor="@color/white"
                                android:textSize="28sp"
                                app:layout_constraintEnd_toEndOf="@+id/imageViewICO"
                                app:layout_constraintStart_toStartOf="@+id/imageViewICO"
                                app:layout_constraintTop_toBottomOf="@+id/imageViewICO" />

                            <ImageView
                                android:id="@+id/imageViewICO"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_marginTop="35dp"
                                android:contentDescription="@string/app_name"
                                app:layout_constraintEnd_toEndOf="@+id/CardTextTitle"
                                app:layout_constraintStart_toStartOf="@+id/CardTextTitle"
                                app:layout_constraintTop_toBottomOf="@+id/CardTextTitle"
                                app:srcCompat="@drawable/flower" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.x.digital.TouchRotateLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>